--- a/arch/um/lkl/Kconfig
+++ b/arch/um/lkl/Kconfig
@@ -54,6 +54,12 @@ config ARCH_DMA_ADDR_T_64BIT
 config BLK_DEV_UBD
        def_bool y if "$(OUTPUT_FORMAT)" = "elf32-i386" || "$(OUTPUT_FORMAT)" = "elf64-x86-64"
 
+config UML_NET
+       def_bool y if "$(OUTPUT_FORMAT)" = "elf32-i386" || "$(OUTPUT_FORMAT)" = "elf64-x86-64"
+       select UML_NET_TUNTAP
+       select UML_NET_VECTOR
+       select UML_NET_SLIRP
+
 config X86_64
        def_bool y if "$(OUTPUT_FORMAT)" = "elf64-x86-64"
 
