um: use syscall_wrapper to define arch-specific information
This is used to generate syscall_defs.h for lkl so that it can be used
as a template of the list of syscall available for LKL apps.

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/arch/um/Kconfig
+++ b/arch/um/Kconfig
@@ -21,6 +21,7 @@ config UML
 	select HAVE_GCC_PLUGINS
 	select TTY # Needed for line.c
 	select MODULE_REL_CRCS if MODVERSIONS
+	select ARCH_HAS_SYSCALL_WRAPPER
 
 config MMU
 	bool
