um: implement vmlinux binary as a relocatable object
The vmlinux build now breaks into two steps: 1) make relocatable object
(linux.o) by ld -r option, then 2) create an executbale by linking
linux.o.  This two steps require two linker scripts, which I wish to
avoid, to properly arrange the location of particular sections in the
final binary.

Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/arch/um/Makefile
+++ b/arch/um/Makefile
@@ -95,14 +95,20 @@ KBUILD_CPPFLAGS += -I$(srctree)/$(HOST_DIR)/include \
 KERNEL_DEFINES = $(strip -Derrno=kernel_errno -Dsigprocmask=kernel_sigprocmask \
 			 -Dmktime=kernel_mktime $(ARCH_KERNEL_DEFINES))
 KBUILD_CFLAGS += $(KERNEL_DEFINES)
+LDFLAGS_vmlinux += -r
 
-PHONY += linux
+PHONY += linux.o
 
-all: linux
+all: linux.o
 
-linux: vmlinux
+linux.o: vmlinux
 	@echo '  LINK $@'
 	$(Q)ln -f $< $@
+
+install: linux.o
+	@echo "  INSTALL	$(INSTALL_PATH)/lib/linux.o"
+	@mkdir -p $(INSTALL_PATH)/lib/
+	@cp linux.o $(INSTALL_PATH)/lib/
 
 define archhelp
   echo '* linux		- Binary kernel image (./linux) - for backward'
