--- a/tools/lkl/lib/um/drivers/Build
+++ b/tools/lkl/lib/um/drivers/Build
@@ -6,8 +6,7 @@
 ethertap-objs := ethertap_kern.o ethertap_user.o
 tuntap-objs := tuntap_kern.o tuntap_user.o
 
-obj-y = 
-obj-$(CONFIG_UML_NET_ETHERTAP) += ethertap.o
-obj-$(CONFIG_UML_NET_TUNTAP) += tuntap.o
+liblkl-$(CONFIG_UML_NET_ETHERTAP) += ethertap.o
+liblk-$(CONFIG_UML_NET_TUNTAP) += tuntap.o
 
-include arch/um/scripts/Makefile.rules
+#include $(srctree)/arch/um/scripts/Makefile.rules
