--- a/tools/lkl/lib/um/skas/Build
+++ b/tools/lkl/lib/um/skas/Build
@@ -3,8 +3,8 @@
 # Copyright (C) 2002 - 2007 Jeff Dike (jdike@{linux.intel,addtoit}.com)
 #
 
-obj-y := mem.o process.o
+liblkl-y += mem.o process.o
 
-USER_OBJS := $(obj-y)
+#USER_OBJS := $(obj-y)
 
-include arch/um/scripts/Makefile.rules
+#include $(srctree)/arch/um/scripts/Makefile.rules
