um: move arch/x86/um/os-Linux to tools/um/
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/tools/um/Makefile
+++ b/tools/um/Makefile
@@ -60,7 +60,7 @@ $(OUTPUT)%-in.o: $(OUTPUT)liblinux.a FORCE
 	$(Q)$(MAKE) -f $(srctree)/tools/build/Makefile.build dir=$(patsubst %/,%,$(dir $*)) obj=$(notdir $*)
 
 # rule to build objects
-$(OUTPUT)%-in.o: $(OUTPUT)lib/linux.o
+$(OUTPUT)%-in.o: $(OUTPUT)lib/linux.o FORCE
 	$(Q)$(MAKE) -f $(srctree)/tools/build/Makefile.build dir=$(patsubst %/,%,$(dir $*)) obj=$(notdir $*)
 
 clean:
@@ -72,3 +72,4 @@ clean:
 FORCE: ;
 .PHONY: all clean FORCE
 .IGNORE: clean
+.PHONY: all clean FORCE
