um: move arch/x86/um/os-Linux to tools/lkl/
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/tools/lkl/Makefile
+++ b/tools/lkl/Makefile
@@ -57,7 +57,7 @@ $(OUTPUT)%: $(OUTPUT)liblinux.a
 	$(QUIET_LINK)$(CC) $(LDFLAGS) $(LDFLAGS_$*-y) -o $@ $^ $(LDLIBS) $(LDLIBS_$*-y)
 
 # rule to build objects
-$(OUTPUT)%-in.o: $(OUTPUT)lib/linux.o
+$(OUTPUT)%-in.o: $(OUTPUT)lib/linux.o FORCE
 	$(Q)$(MAKE) -f $(srctree)/tools/build/Makefile.build dir=$(patsubst %/,%,$(dir $*)) obj=$(notdir $*)
 
 clean:
@@ -66,3 +66,4 @@ clean:
 	$(call QUIET_CLEAN, liblinux.a)$(RM) $(OUTPUT)/liblinux.a
 
 .IGNORE: clean
+.PHONY: all clean FORCE
